Domain name updated.

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "//thechead.github.io/nikku-no-gemu/"
+baseurl = "//www.nikkunogemu.com/"
 languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
@@ -48,7 +48,7 @@ paginate = 5
 
     [languages.en.params.logo]
       logoText = "nikku no gēmu"
-      logoHomeLink = "https://thechead.github.io/nikku-no-gemu/"
+      logoHomeLink = "https://www.nikkunogemu.com/"
     # or
     #
     # path = "/img/your-example-logo.svg"
