--- a/hugo.toml
+++ b/hugo.toml
@@ -27,6 +27,10 @@ paginate = 5
   #(default is Description or Summary metadata in the front matter)
   # rssFullText = true
 
+[services]
+  [services.googleAnalytics]
+    ID = 'G-SX7SE5J81P'
+
 
 [languages]
   [languages.en.params]
